@startuml
hide methods
hide stereotypes

skinparam class {
    BackgroundColor #ffffff
    BorderColor #000000
}

' ============================
' ENTIDADES
' ============================

class User {
    + id : INT <<PK>>
    username : String
    email : String
    password : String
    is_active : Boolean
    is_staff : Boolean
    is_superuser : Boolean
}

class Perfil {
    + user_id : INT <<PK,FK>>
    celular : String
    tipo : String
}

class Evento {
    + id : INT <<PK>>
    nome : String
    descricao : String
    data_inicio : DateTime
    data_fim : DateTime
    local : String
}

class Atividade {
    + id : INT <<PK>>
    titulo : String
    descricao : String
    horario_inicio : Time
    horario_fim : Time
    tipo : String
    evento_id : INT <<FK>>
    responsavel_id : INT <<FK>>
}

class UserEvento {
    + id : INT <<PK>>
    user_id : INT <<FK>>
    evento_id : INT <<FK>>
    data_inscricao : DateTime
}

' ============================
' RELACIONAMENTOS
' ============================

' 1:1 USERS — PERFIL
User "1 " -- "1 " Perfil : possui

' 1:N EVENTOS — ATIVIDADE
Evento "1  " -- "N  " Atividade : contém

' 1:N USERS — ATIVIDADE (responsável)
User "1" -- "N    " Atividade : responsável_por

' N:N USERS — EVENTOS via USEREVENTOS
User "1   " --- "N        " UserEvento
Evento "1 " -- "        N" UserEvento


@enduml
